# Yulduz

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/shaders/: triangle.wgsl
modules/: CMakeLists.txt
modules/Application/: CMakeLists.txt
modules/Application/include/Yulduz/: Yulduz.hpp
modules/Application/src/: Main.cpp  Yulduz.cpp
modules/Engine/: CMakeLists.txt
modules/Engine/YulduzAssets/: CMakeLists.txt
modules/Engine/YulduzAssets/include/Yulduz/: Assets.hpp
modules/Engine/YulduzAssets/include/YulduzAssets/: AssimpAsset.hpp  Enums.hpp  FileAsset.hpp  IAsset.hpp  Manager.hpp  TextureAsset.hpp
modules/Engine/YulduzAssets/src/: Assets.cpp  AssimpAsset.cpp  FileAsset.cpp  Manager.cpp  TextureAsset.cpp
modules/Engine/YulduzCore/: CMakeLists.txt
modules/Engine/YulduzCore/include/Yulduz/: Core.hpp
modules/Engine/YulduzCore/include/YulduzCore/: Events.hpp  Logger.hpp  Timer.hpp  YulduzPCH.hpp
modules/Engine/YulduzCore/src/: Core.cpp  Logger.cpp  Timer.cpp
modules/Engine/YulduzEngine/: CMakeLists.txt
modules/Engine/YulduzEngine/include/Yulduz/: Engine.hpp
modules/Engine/YulduzEngine/src/: Engine.cpp
modules/Engine/YulduzRender/: CMakeLists.txt
modules/Engine/YulduzRender/include/Yulduz/: Render.hpp
modules/Engine/YulduzRender/include/YulduzRender/: Camera.hpp  Context.hpp  Enums.hpp  ImGui.hpp
modules/Engine/YulduzRender/include/YulduzRender/Camera/: Camera.hpp  Manager.hpp
modules/Engine/YulduzRender/include/YulduzRender/Context/: BindGroup.hpp  Buffer.hpp  Buffers.hpp  CommandEncoder.hpp  Pipelines.hpp  RenderBundle.hpp  RenderContext.hpp  RenderPass.hpp  Sampler.hpp  Shader.hpp  Texture.hpp  VertexLayout.hpp
modules/Engine/YulduzRender/src/: ImGui.cpp  Render.cpp
modules/Engine/YulduzRender/src/Camera/: Camera.cpp  Manager.cpp
modules/Engine/YulduzRender/src/Context/: BindGroup.cpp  Buffer.cpp  Buffers.cpp  CommandEncoder.cpp  Pipelines.cpp  RenderBundle.cpp  RenderContext.cpp  RenderPass.cpp  Sampler.cpp  Shader.cpp  Texture.cpp  VertexLayout.cpp
modules/Engine/YulduzWindow/: CMakeLists.txt
modules/Engine/YulduzWindow/include/Yulduz/: Window.hpp
modules/Engine/YulduzWindow/include/YulduzWindow/: Enums.hpp  Events.hpp
modules/Engine/YulduzWindow/src/: Callbacks.cpp  Window.cpp
scripts/: Setup.bat  windows.cmake
